--- a/quiz/cohort_04_ind.html
+++ b/quiz/cohort_04_ind.html
@@ -1,1 +1,3 @@
+<div style="background-color:#0E1117">
 <iframe src='https://jpawitro-cohort-04-quiz-home-q72qk6.streamlit.app/?embedded=true'style="width:100%; height:100%; margin:0px; padding:0px"></iframe>
+</div>
